fix pizzaItem bugs(select, pizzaCount alignment)

--- a/code/css/index.css
+++ b/code/css/index.css
@@ -182,6 +182,14 @@ header{
 	cursor: pointer;
 }
 
+.countNavi{
+	-moz-user-select: -moz-none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+ }
+
 #decCount {
 	left: 10px;
 	color: black;
@@ -201,11 +209,11 @@ header{
 	height: 30px;
 	background-color: black;
 }
-#countDiv label {
+#countPizza {
 	position: absolute;
 	font-size: 25px;
 	color: white;
-	left: 8px;
+	left: 7px;
 }
 
 #countPrice {
